# mcp_sample

./: .gitignore
doc/: README.md
docker/: docker-compose.yaml
docker/keycloak-data/h2/: keycloakdb.mv.db  keycloakdb.trace.db
js/: package-lock.json  package.json  tsconfig.json
js/src/: auth_server.ts  index.ts  simple_sever.ts
py/: .env.sample  README.md  agent_openai.py  auth_claude_agent_client.py  auth_clinet.py  auth_get_access_token.py  auth_openai_agent_client.py  auth_openai_clinet.py  auth_server.py  elicit_claude_agent_client.py  elicit_client.py  elicit_server.py  pyproject.toml  resource_claude_agent_client.py  resource_client.py  resource_openai_agent_client.py  resource_server.py  simple_http_claude_agent_client.py  simple_http_claude_client.py  simple_http_client.py  simple_http_openai_agent_client.py  simple_http_openai_client.py  simple_http_server.py  simple_stdio_claude_agent_client.py  simple_stdio_client.py  simple_stdio_openai_agent_client.py  simple_stdio_server.py  weather.py
